recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:4: error: value :: is not a member of Int
		return l.head :: l.tail.head
                              ^